aas82 add google format script